--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,8 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title "Tous les articles" %}
+{% block title "Blog | Code by Aurore" %}
 
 {% block body %}
+
+<section class="blog">
+
+    <!-- Filtres -->
+    <div class="blog__filters">
+        <select name="categories">
+            <option value="">Toutes les catégories</option>
+            {% for category in categories %}
+                <option value="{{ category.slug }}">{{ category.name }}</option>
+            {% endfor %}
+        </select>
+
+        <select name="tags">
+            <option value="">Tous les tags</option>
+            {% for tag in tags %}
+                <option value="{{ tag.slug }}">#{{ tag.name }}</option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <!-- Liste des articles -->
+    <div class="blog__articles">
+        {% for article in articles %}
+            <article class="blog__article">
+                <div class="blog__article-header">
+                    <h2 class="title">
+                        <a href="{{ path('article.show', {'slug': article.slug}) }}">{{ article.title }}</a>
+                    </h2>
+                    <span class="category">{{ article.category.name }}</span>
+                </div>
+                <p class="blog__article-meta">{{ article.metaDescription }}</p>
+                <div class="blog__article-separator"></div>
+                <div class="blog__article-footer">
+                    <span class="date">Publié le {{ article.publishedAt | date("d.m.y") }}
+                    </span>
+                    <div class="tags">
+                        {% for tag in article.tags %}
+                            <span>#{{ tag.name }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+            </article>
+        {% else %}
+            <p>Aucun article trouvé.</p>
+        {% endfor %}
+    </div>
+
+</section>
+
+
+  
     <h1>BLOG</h1>
     <ul>
         {% for article in articles %}
